# adventofcode2023

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: day_1.h  day_2.h
src/: CMakeLists.txt  day_1.cpp  day_2.cpp  main.cpp
test/: CMakeLists.txt  day_1_tests.cpp  day_2_tests.cpp
